zokrates_cli/examples/compile_errors/non_main_public_args.zok
def mul(public field a) -> field { // `public` should not be allowed here
    return a * a;
}

def main(field a, field b) {
    assert(mul(a) == b);
    return;
}